--- a/packages/craco-rollup-setup/package.json
+++ b/packages/craco-rollup-setup/package.json
@@ -49,6 +49,7 @@
         "image-minimizer-webpack-plugin": "3.8.3",
         "prettier": "3.0.2",
         "react-app-alias": "2.2.2",
+        "serve": "^14.2.1",
         "sharp": "0.32.5",
         "terser-webpack-plugin": "5.3.9",
         "tslint-config-prettier": "1.18.0",
